<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xgb_plc_modbus</name>
  <version>0.1.0</version>
  <description>LS XBC-DR10E PLC Modbus RTU bridge for ROS 2 (M0000 / P000 / P020)</description>
  <maintainer email="kimsungyeoun@todo.todo">kimsungyeoun</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>pymodbus</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
